fixed hero box font size on mobile

--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -28,7 +28,7 @@
 .hero h1 {
   font-family: 'Quattrocento', serif;
   color: #442640;
-  font-size: 8vh;
+  font-size: 6vh;
   font-weight: 700;
   text-shadow: rgba(0,0,0,0.95) 1px 1px;
 }
